# piloto

./: .env.example  .gitignore  .tool-versions  Dockerfile  README.md  build_files.sh  docker-compose.yml  install.sh  lefthook.yml  manage.py  pyproject.toml  requirements.txt  vercel.json
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: navigation.tsx
pweb/: settings.py  urls.py  wsgi.py
