[tool.poetry]
name = "pweb"
version = "0.0.1"
description = "IFPI turma 626 2024.2"
authors = ["João Victor <jvictorsantos852@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.1.2"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.2.3"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"

[tool.poetry.group.dev.dependencies]
lefthook = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.lefthook]
hooks = "lefthook.yml"
